tdf#131733 Show only CN part of X.509 subject info

The problem was that the whole Subject info was returned from
X.509 certs if they did not start with one of "CN", "OU", "O", "E"

Instead of extending this list with random keys, pass the type of cert
and only return the whole Subject info if it's an OpenGPG one, and
process the info unconditionally if it's X.509 like before the OpenGPG
integration

Change-Id: I1aa5d7285e48b0f4a769a073cdfb7732e482792c